syntax = "proto3";

package ethos.auth.v1;

import "google/api/annotations.proto";
import "ethos/auth/v1/messages.proto";

option go_package = "github.com/semmidev/ethos-go/internal/generated/grpc/ethos/auth/v1;authv1";

// AuthService provides authentication and user management functionality.
service AuthService {
  // Register creates a new user account.
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/v1/auth/register"
      body: "*"
    };
  }

  // Login authenticates a user and returns tokens.
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/auth/login"
      body: "*"
    };
  }

  // GoogleLogin returns the Google OAuth login URL.
  rpc GoogleLogin(GoogleLoginRequest) returns (GoogleLoginResponse) {
    option (google.api.http) = {
      get: "/v1/auth/google/login"
    };
  }

  // GoogleCallback handles the Google OAuth callback.
  rpc GoogleCallback(GoogleCallbackRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/auth/google/callback"
      body: "*"
    };
  }

  // Logout terminates the specified session.
  rpc Logout(LogoutRequest) returns (LogoutResponse) {
    option (google.api.http) = {
      post: "/v1/auth/logout"
      body: "*"
    };
  }

  // LogoutAll terminates all sessions for a user.
  rpc LogoutAll(LogoutAllRequest) returns (LogoutResponse) {
    option (google.api.http) = {
      post: "/v1/auth/logout-all"
      body: "*"
    };
  }

  // ListSessions returns all sessions for the authenticated user.
  rpc ListSessions(ListSessionsRequest) returns (ListSessionsResponse) {
    option (google.api.http) = {
      get: "/v1/auth/sessions"
    };
  }

  // RevokeOtherSessions revokes all sessions except the current one.
  rpc RevokeOtherSessions(RevokeOtherSessionsRequest) returns (RevokeOtherSessionsResponse) {
    option (google.api.http) = {
      delete: "/v1/auth/sessions/other"
    };
  }

  // GetProfile retrieves the current user's profile.
  rpc GetProfile(GetProfileRequest) returns (ProfileResponse) {
    option (google.api.http) = {
      get: "/v1/auth/profile"
    };
  }

  // UpdateProfile updates the current user's profile.
  rpc UpdateProfile(UpdateProfileRequest) returns (ProfileResponse) {
    option (google.api.http) = {
      put: "/v1/auth/profile"
      body: "*"
    };
  }

  // ChangePassword changes the user's password.
  rpc ChangePassword(ChangePasswordRequest) returns (SuccessResponse) {
    option (google.api.http) = {
      post: "/v1/auth/change-password"
      body: "*"
    };
  }

  // VerifyEmail verifies the user's email address.
  rpc VerifyEmail(VerifyEmailRequest) returns (SuccessResponse) {
    option (google.api.http) = {
      post: "/v1/auth/verify-email"
      body: "*"
    };
  }

  // ResendVerification resends the verification email.
  rpc ResendVerification(ResendVerificationRequest) returns (SuccessResponse) {
    option (google.api.http) = {
      post: "/v1/auth/resend-verification"
      body: "*"
    };
  }

  // ForgotPassword initiates the password reset flow.
  rpc ForgotPassword(ForgotPasswordRequest) returns (SuccessResponse) {
    option (google.api.http) = {
      post: "/v1/auth/forgot-password"
      body: "*"
    };
  }

  // ResetPassword completes the password reset flow.
  rpc ResetPassword(ResetPasswordRequest) returns (SuccessResponse) {
    option (google.api.http) = {
      post: "/v1/auth/reset-password"
      body: "*"
    };
  }

  // ExportUserData exports all user data (GDPR compliance).
  rpc ExportUserData(ExportUserDataRequest) returns (ExportUserDataResponse) {
    option (google.api.http) = {
      get: "/v1/auth/export"
    };
  }

  // DeleteAccount permanently deletes the user account.
  // Uses POST instead of DELETE to support request body with password confirmation.
  rpc DeleteAccount(DeleteAccountRequest) returns (SuccessResponse) {
    option (google.api.http) = {
      post: "/v1/auth/account/delete"
      body: "*"
    };
  }
}

// SuccessResponse for simple success/failure responses.
message SuccessResponse {
  // Whether the operation was successful.
  bool success = 1;
  // Human-readable message describing the result.
  string message = 2;
}
